--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   provider: ^4.1.3
   rxdart: ^0.24.1
   fluttertoast: ^4.0.1
+  string_validator: ^0.1.4
+  # keyboard_actions: ^3.2.1+1
 
 dev_dependencies:
   flutter_test:
